--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,6 +43,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: "keycloak_version=15.1.1"
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
