--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - 
+        name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV    
       -
         name: Checkout repo
         uses: actions/checkout@v2
@@ -34,7 +37,7 @@ jobs:
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: |
-            mantissoftware/keycloak
+            mantissoftware/keycloak      
       -
         name: Build and push
         id: docker_build
@@ -43,7 +46,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: "keycloak_version=15.1.1"
+          build-args: "keycloak_version=$env.RELEASE_VERSION"
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
